--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,10 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # ------------------------------------------------------------------------------
 # Custom settings
+
+collections:
+  protected:
+
 # ------------------------------------------------------------------------------
 # Useful links
 github_username: "<github_username>"
