config protected update

--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,7 @@ collections:
   items:
     output: true
   protected:
+    output: true
 # ------------------------------------------------------------------------------
 
 
